# nafs-4

./: .gitignore  Cargo.toml  README.md  nafs4_framework_specification.md
nafs-cli/: Cargo.toml  README.md
nafs-cli/src/: commands.rs  lib.rs  main.rs  output.rs  repl.rs
nafs-core/: Cargo.toml  README.md
nafs-core/src/: error.rs  lib.rs  types.rs
nafs-integration/: Cargo.toml
nafs-integration/tests/: e2e_tests.rs
nafs-llm/: Cargo.toml  README.md
nafs-llm/src/: lib.rs
nafs-logging/: Cargo.toml  README.md
nafs-logging/src/: lib.rs
nafs-memory/: Cargo.toml  README.md  build.rs
nafs-memory/proto/: barq_db.proto  barq_graph.proto
nafs-memory/src/: lib.rs  providers.rs
nafs-orchestrator/: Cargo.toml
nafs-orchestrator/src/: agent_manager.rs  event_bus.rs  health_monitor.rs  lib.rs  state_persistence.rs
nafs-orchestrator/tests/: integration_test.rs
nafs-python/: .gitignore  Cargo.toml  README.md  pyproject.toml
nafs-python/examples/: barq_rag_demo.py  complete_research_pipeline.py  embedding_rag_demo.py  knowledge_graph_demo.py  multi_agent_workflow.py  parallel_cognitive_system.py  research_assistant.py  self_evolving_tutor.py  simple_agent.py
nafs-python/src/: lib.rs
nafs-server/: Cargo.toml  README.md
nafs-server/src/: lib.rs  main.rs
nafs-system1/: Cargo.toml  README.md
nafs-system1/src/: lib.rs
nafs-system2/: Cargo.toml  README.md
nafs-system2/src/: lib.rs  llm_planner.rs  process_supervision.rs  reasoning_cache.rs  symbolic_verifier.rs  tree_of_thought.rs
nafs-system2/tests/: integration_test.rs
nafs-system3/: Cargo.toml  README.md
nafs-system3/src/: executive_monitor.rs  hybrid_reward.rs  intrinsic_motivation.rs  lib.rs  memory_module.rs  self_model.rs
nafs-system3/tests/: integration_test.rs
nafs-system4/: Cargo.toml  README.md
nafs-system4/src/: capability_analyzer.rs  evolution_log.rs  failure_analyzer.rs  kernel_supervisor.rs  lib.rs  role_optimizer.rs  textual_backprop.rs
nafs-system4/tests/: integration_test.rs
nafs-tools/: Cargo.toml  README.md
nafs-tools/src/: lib.rs
