[workspace]
resolver = "2"
members = [
    "nafs-core",
    "nafs-system1",
    "nafs-system2",
    "nafs-system3",
    "nafs-system4",
    "nafs-memory",
    "nafs-llm",
    "nafs-tools",
    "nafs-logging",
    "nafs-cli",
    "nafs-server",
    "nafs-orchestrator", "nafs-integration",
]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
