[package]
name = "nafs-cli"
version = "0.1.0"
edition = "2021"
authors = ["NAFS Team <dev@nafs.dev>"]
license = "Apache-2.0"
description = "Command Line Interface for NAFS-4"

[dependencies]
nafs-core = { path = "../nafs-core" }
nafs-orchestrator = { path = "../nafs-orchestrator" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = "0.3"
uuid = { workspace = true }
chrono = { workspace = true }
