[package]
name = "nafs-cli"
version = "0.5.0"
edition = "2021"
authors = ["NAFS Team <dev@nafs.dev>"]
license = "Apache-2.0"

[[bin]]
name = "nafs"
path = "src/main.rs"

[dependencies]
nafs-core = { path = "../nafs-core" }
nafs-orchestrator = { path = "../nafs-orchestrator" }
tokio = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.11", features = ["json"] } 
uuid = { workspace = true }
chrono = { workspace = true }
