[package]
name = "nafs-logging"
version = "0.1.0"
edition = "2021"
authors = ["NAFS Team <dev@nafs.dev>"]
license = "Apache-2.0"
description = "Observability: Logging, tracing, and metrics"

[dependencies]
nafs-core = { path = "../nafs-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
