[package]
name = "nafs-memory"
version = "0.1.0"
edition = "2021"
authors = ["NAFS Team <dev@nafs.dev>"]
license = "MIT"
description = "Memory subsystem: Vector DB and Graph DB interfaces"

[dependencies]
nafs-core = { path = "../nafs-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
