[package]
name = "nafs-python"
version = "0.1.0"
edition = "2021"
authors = ["NAFS Team <dev@nafs.dev>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nafs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { workspace = true }
nafs-core = { path = "../nafs-core" }
nafs-orchestrator = { path = "../nafs-orchestrator" }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
