[package]
name = "nafs-server"
version = "0.1.0"
edition = "2021"
authors = ["NAFS Team <dev@nafs.dev>"]
license = "MIT"
description = "REST API Server for NAFS-4"

[dependencies]
nafs-core = { path = "../nafs-core" }
nafs-orchestrator = { path = "../nafs-orchestrator" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = "0.3"
uuid = { workspace = true }
chrono = { workspace = true }
