[package]
name = "nafs-tools"
version = "0.1.0"
edition = "2021"
authors = ["NAFS Team <dev@nafs.dev>"]
license = "MIT"
description = "Tool management for agent actions"

[dependencies]
nafs-core = { path = "../nafs-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
